--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,4 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+dotenvy = { workspace = true }
